[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Default - Title.tres" type="DynamicFont" id=1]
[ext_resource path="res://ModLoading/ModLoader.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/Default.tres" type="DynamicFont" id=6]
[ext_resource path="res://Textures/emptyButton.png" type="Texture" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="logoThingy" type="RichTextLabel" parent="."]
anchor_top = 0.945
anchor_bottom = 0.945
margin_top = -6.0
margin_right = 116.0
margin_bottom = 30.0
custom_fonts/normal_font = ExtResource( 6 )
text = "NukeLabs 2022"

[node name="buttonContainers" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -52.0
margin_right = 90.0
margin_bottom = 52.0

[node name="quitButton" type="TextureButton" parent="buttonContainers"]
anchor_top = 0.5
anchor_bottom = 0.5
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="buttonContainers/quitButton"]
anchor_left = 0.25
anchor_right = 0.25
margin_right = 71.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
text = "QUIT"

[node name="sandboxButton" type="TextureButton" parent="buttonContainers"]
anchor_top = -0.5
anchor_bottom = -0.5
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="buttonContainers/sandboxButton"]
anchor_left = 0.19
anchor_right = 0.2
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "DESERT"

[node name="settingsButton" type="TextureButton" parent="buttonContainers"]
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="buttonContainers/settingsButton"]
anchor_left = 0.1
anchor_right = 0.1
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "SETTINGS"

[node name="Settings" parent="buttonContainers" instance=ExtResource( 5 )]
visible = false

[node name="switchingButton" type="TextureButton" parent="buttonContainers"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="buttonContainers/switchingButton"]
anchor_left = 0.248
anchor_top = 0.193
anchor_right = 0.248
anchor_bottom = 0.22
margin_left = -42.64
margin_top = 0.28
margin_right = 132.36
margin_bottom = 17.2
custom_fonts/font = ExtResource( 6 )
text = "Test Text 1"
align = 1

[node name="playLevelButton" type="TextureButton" parent="buttonContainers"]
anchor_top = 1.35
anchor_bottom = 1.5
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="buttonContainers/playLevelButton"]
margin_left = 1.0
margin_top = 9.0
margin_right = 180.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 6 )
text = "PLAY CUSTOM LEVEL"
align = 1

[node name="Mod_Loader" parent="buttonContainers" instance=ExtResource( 2 )]
anchor_left = -1.0
anchor_top = -1.0
anchor_right = -0.1
anchor_bottom = 1.6
